# Sentient-Stadium-AI-SSA-

./: .gitignore  Agents.md  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_digital_twin.py  003_event_streaming.py  004_ai_intelligence.py  005_navigation.py  006_orchestration.py
backend/app/: config.py  main.py
backend/app/features/ai_intelligence/: exceptions.py
backend/app/features/ai_intelligence/api/: decision_routes.py  deps.py  error_handlers.py  explanation_routes.py  prediction_routes.py  risk_routes.py  router.py  status_routes.py  websocket.py
backend/app/features/ai_intelligence/confidence/: confidence_engine.py
backend/app/features/ai_intelligence/consumers/: intelligence_consumer.py
backend/app/features/ai_intelligence/context/: match_context.py  spatial_reasoning.py
backend/app/features/ai_intelligence/decision/: decision_engine.py  intervention_simulator.py
backend/app/features/ai_intelligence/dto/: requests.py  responses.py
backend/app/features/ai_intelligence/engine/: context.py  pipeline.py  stage_1_assessment.py  stage_2_behaviour.py  stage_3_prediction.py  stage_4_risk.py  stage_5_simulation.py  stage_6_decision.py  stage_7_explain.py  stage_8_publish.py
backend/app/features/ai_intelligence/explainability/: explainability_engine.py
backend/app/features/ai_intelligence/knowledge/: knowledge_base.py
backend/app/features/digital_twin/: __init__.py  exceptions.py
backend/app/features/event_streaming/: __init__.py  exceptions.py
backend/app/features/navigation/: __init__.py  exceptions.py
backend/app/features/orchestration/: exceptions.py
backend/app/shared/: database.py  exceptions.py  result.py
backend/app/shared/models/: base.py
backend/app/shared/utils/: sanitization.py
(+347 files in other folders)
