[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stadiummind-iam"
version = "1.0.0"
description = "StadiumMind OS - Enterprise Multi-Agent AI Platform for FIFA World Cup 2026"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "firebase-admin>=6.6.0,<7.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "redis>=5.2.0,<6.0.0",
    "httpx>=0.28.0,<1.0.0",
    "structlog>=24.4.0,<25.0.0",
    "bleach>=6.2.0,<7.0.0",
    "geoalchemy2>=0.15.0,<1.0.0",
    "shapely>=2.0.0,<3.0.0",
    "websockets>=13.0,<15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "COM", "C4", "DTZ", "ISC", "ICN", "PIE", "PT", "RSE", "RET", "SLF", "TCH", "ARG", "PTH", "ERA"]
ignore = ["S101", "SLF001", "TC001", "TC002", "TC003", "UP042", "ARG001", "ARG002", "S110", "B008"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/features/auth/tests", "app/features/digital_twin/tests", "app/features/event_streaming/tests", "app/features/ai_intelligence/tests", "app/features/navigation/tests"]
